syntax = "proto3";

package xmc.srv.core.grader;

option go_package = "grader";

import "github.com/xmc-dev/xmc/xmc-core/proto/searchmeta/searchmeta.proto";

service GraderService {
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc Read(ReadRequest) returns (ReadResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Update(UpdateRequest) returns (UpdateResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
  rpc Search(SearchRequest) returns (SearchResponse) {}
}

message Grader {
  string id = 1;
  string attachment_id = 2;
  string language = 3;
  string name = 4;
}

message CreateRequest {
  Grader grader = 1;
  bytes code = 2;
}

message CreateResponse {
  string id = 1;
}

message ReadRequest {
  string id = 1;
}

message ReadResponse {
  Grader grader = 1;
}

message GetRequest {
  string name = 1;
}

message GetResponse {
  Grader grader = 1;
}

message UpdateRequest {
  string id = 1;
  bytes code = 2;
  string language = 3;
  string name = 4;
}

message UpdateResponse {
}

message DeleteRequest {
  string id = 1;
}

message DeleteResponse {
}

message SearchRequest {
  uint32 limit = 1;
  uint32 offset = 2;
  string name = 3;
  string language = 4;
}

message SearchResponse {
  repeated Grader graders = 1;
  xmc.srv.core.searchmeta.Meta meta = 2;
}
